<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

<group android:id="@+id/menu_actionbar">
     <item
         android:id="@+id/menuitem_search"
         android:title="Pesquisar"
         android:icon="@drawable/ic_search_white_36dp"
         app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
     <item android:id="@+id/new_produto"
          app:showAsAction="always"
          android:title="@string/menu_salvar_produto"/>
     <item
         android:id="@+id/menuitem_excluir"
         android:icon="@drawable/ic_action_discard"
         app:showAsAction="collapseActionView"
         android:title="@string/menu_item_excluir"/>
     <item
         android:id="@+id/menuitem_cancelar"
         android:icon="@drawable/ic_action_cancel"
         app:showAsAction="collapseActionView"
         android:title="@string/menu_item_cancelar"/>
 </group>
</menu>