<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imv_item"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/information_photo"
        android:src="@drawable/foto_sombra" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/label_nome_produto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_nome_produto" />
                <TextView
                    android:id="@+id/tv_item_nome_produto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/label_marca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_marca" />

                <TextView
                    android:id="@+id/tv_item_marca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/label_nome_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_local_compra" />

                <TextView
                    android:id="@+id/tv_item_nome_local_compra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_preco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_valor_produto" />

                <TextView
                    android:id="@+id/tv_item_preco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>